# apple-notes-mcp

./: .gitignore  README.md  applescript_wrapper.py  notes_operations.py  pyproject.toml
src/: models.py  server.py
src/apple-notes-mcp/: notes_client.py  server.py
src/apple_notes_mcp/: applescript_wrapper.py  notes_client.py  server.py
tests/: test_server.py
